// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders jméno sestupně 1`] = `
<button
  className="SortHeader"
  onClick={[MockFunction]}
  type="button"
>
  jméno
   
  ↓
</button>
`;

exports[`renders the default 1`] = `
<button
  className="SortHeader"
  onClick={[MockFunction]}
  type="button"
>
  příjmení
   
  
</button>
`;
